Made full screen video with DevTools not flash black on Android.

When DevTools draws to capture the screen output for the remote
side, the video draw quad isn't processed as an overlay since
it's not in the root render pass.  However, on android, overlays
aren't optional since Chrome doesn't have the pixels.  So, it
uses the PictureBuffer texture to draw, which obscures the surface
view by removing the transparent box that the overlay put there.

Plus, drawing also happens normally, with overlays (no idea why),
and both results end up on the device display.  The result is that
the user sees a visible flicker as the transparent overlay box
shows up and goes away.  This normal draw has the side-effect of
updating the SurfaceView's contents.

It's unclear to me why this draw happens if we're also going to
display the one for DevTools.  The frame rate is ~halved.

This CL attaches changes the PictureBuffer textures to be 2D, and
attaches a 1x1 transparent textures to them, in the case we're using
SurfaceView.  When DevTools draw uses this texture to draw the video
quad, it draws the transparent box instead of obscuring it.

In the long run, we should probably transition away from SurfaceView
if we ever detect that we're drawing the video quads rather than
processing them for overlays.  This would have the benefit that one
could see the video in DevTools, too.

BUG=592798

Review URL: https://codereview.chromium.org/1785153004

Cr-Commit-Position: refs/heads/master@{#383828}

Former-commit-id: 2d8fd4af4de3a87aeabe6d3bc86e9b15962b36da